# SoapySidekiq

./: CMakeLists.txt  FindSidekiq.cmake  README.md  Registation.cpp  Settings.cpp  SoapySidekiq.hpp  Streaming.cpp
tests/: README.txt  antenna_smoke.cpp  app_template  cf32_validate  cs16_validate  fdd_lo_samples  get_offset_overload  range_smoke.cpp  record_cs16  run_cs16  run_loop  rx_dual_cs16_validate  rx_multi_cs16_validate.cpp  rx_multicard_cs16_validate.cpp  rx_tx_samples  test_api  tx_from_file  txtone  txtone_1pps
